[gd_scene load_steps=9 format=3 uid="uid://b2lyr3k3pre3c"]

[ext_resource type="Script" path="res://charFunc.gd" id="1_7lwci"]
[ext_resource type="Texture2D" uid="uid://b3wagihnnskul" path="res://heart.png" id="1_c0kym"]
[ext_resource type="Script" path="res://boxFunc.gd" id="3_5rwid"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u4th6"]
size = Vector2(7.5, 7.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xcij8"]
size = Vector2(144, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4xx7o"]
size = Vector2(8, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8sf2"]
size = Vector2(144, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xecyf"]
size = Vector2(8, 128)

[node name="Node2D" type="Node2D"]
position = Vector2(248, 256)

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(72, 88)
script = ExtResource("1_7lwci")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_u4th6")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_c0kym")

[node name="Box" type="StaticBody2D" parent="."]
position = Vector2(72, 88)
script = ExtResource("3_5rwid")

[node name="Box_Top" type="CollisionShape2D" parent="Box"]
position = Vector2(0, -60)
shape = SubResource("RectangleShape2D_xcij8")

[node name="Box_Left" type="CollisionShape2D" parent="Box"]
position = Vector2(-68, 0)
shape = SubResource("RectangleShape2D_4xx7o")

[node name="Box_Bottom" type="CollisionShape2D" parent="Box"]
position = Vector2(0, 60)
shape = SubResource("RectangleShape2D_r8sf2")

[node name="Box_Right" type="CollisionShape2D" parent="Box"]
position = Vector2(68, 0)
shape = SubResource("RectangleShape2D_xecyf")
